mid-october fixes

--- a/MathGame/about.html
+++ b/MathGame/about.html
@@ -104,6 +104,8 @@
 				  <a href="about.html">Om siden</a>
 				  <a href="about.html#contact">Kontakt oss</a>
 				  <a href="about.html#news">Nylige oppdateringer</a>
+				  <a href="saveandload.html">Lagre / Last Inn</a>
+				  <a href="faq.html">FAQ</a>
 				  <a href="#"> </a>
 				  <a onclick="resetPrompt()">Tilbakestill (Slett alt)</a>
 				</div>
@@ -194,13 +196,20 @@
 		</div>
 		<article class="content">
 			<h2 class="section-title">Nyheter</h1>
-				<!--<p>??.10.2022</p>
+				<p>??.10.2022</p>
 				- Forbedret måten pokemon lagres og lastes inn på, slik at belastningen på spillet blir mindre.<br>
-				- La til en fiks for når man bruker frem og tilbake navigasjon.<br>-->
+				- La til en fiks for når man bruker frem og tilbake navigasjon.<br>
+				- Laget en FAQ side.<br>
+				- Laget en funksjon for å lagre og laste opp brukerdata som en fil.<br>
+				- Oppdaterte sorteringsfunksjonen på Pokedex.<br>
+				- Begrenset pokemonene som er lastet inn på mattesiden. Dette er for å begrense data som lastes ned fra nettsiden.<br>
+				- Gikk over til en lokal database for pokemon. Dette bør gjøre så feilene for å få pokemon blir sjeldnere.<br>
+				- Endret innlastningsmetoden på pokemon, slik at pokemon med feil kan fikses fortløpende.<br>
+				- La til flere nye karakterer på butikksiden.<br>
 				<p>06.10.2022</p>
-				- Enda en hotfix! Makan til rotete kode! :P
-				- La til en ny varselboks på forsiden, hvis jeg trenger å gi meldinger til brukerne.
-				- La til to nye tilbakemeldingsbokser på "kontakt-oss" for de som ikke vil sende e-post.
+				- Enda en hotfix! Makan til rotete kode! :P<br>
+				- La til en ny varselboks på forsiden, hvis jeg trenger å gi meldinger til brukerne.<br>
+				- La til to nye tilbakemeldingsbokser på "kontakt-oss" for de som ikke vil sende e-post.<br>
 				<p>03.10.2022</p>
 				- Hotfixet Halloween eventet:<br>
 				- Shadow MewTwo har nå riktig bilde. (OG det oppdaterer seg til riktg, etterhvert) Denne typen fix vil snart være på plass for alle de buggede pokemonene, når jeg omarbeider hvordan de lastes inn. (Så om du har Alolan "Rapidash" så blir dette fikset snart-ish)<br>
