--- a/MathGame/saveandload.html
+++ b/MathGame/saveandload.html
@@ -12,9 +12,6 @@
 		<meta name="author" content="Tirco">
 		<link rel="stylesheet" href="globalstyle.css?v=21">
 		<!--<link rel="stylesheet" href="cookies.css?v=1">-->
-		<link rel="stylesheet" href="menustyle.css?v=21">
-		<link rel="stylesheet" href="pokemon.css?v=21">
-		<link rel="stylesheet" href="test.css?v=21">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
 		<!-- <link rel="stylesheet" href="https://www.jsdelivr.com/package/npm/bulma> -->
 	</head>
@@ -104,6 +101,8 @@
 					  <a href="about.html">Om siden</a>
 					  <a href="about.html#contact">Kontakt oss</a>
 					  <a href="about.html#news">Nylige oppdateringer</a>
+					  <a href="saveandload.html">Lagre / Last Inn</a>
+					  <a href="faq.html">FAQ</a>
 					  <a href="#"> </a>
 					  <a onclick="resetPrompt()">Tilbakestill (Slett alt)</a>
 					</div>
@@ -126,21 +125,24 @@
 		  </div>
 	<div class="main">
 		<h1 class="center">Lagre og Last Opp (Beta)</h1>
-		<div id="downloadSection" class="center datasection">
-			<h2>Lagre</h2><br>
-			<p>Her kan du lagre dataen din som en fil, og laste ned til din enhet.</p>
+		<div id="downloadSection" class="center datasection img-downloadSection">
+			<h2>Lagre</h2>
+			<p>Her kan du lagre dataen din som en fil, og laste ned til din enhet.<br>
+			Denne funksjonen er under utvikling, og det kan derfor hende at den ikke alltid fungerer.
+			Det kan hende at filen er korrupt (altså, den kan ikke leses), eller andre feil. Hvis du møter på slike feil, vennligst rapporter de til oss via "Kontakt Oss".</p>
+			<p>Vennligst ikke del lagringsdataen din med andre spillere.</p>
 			<button onclick="createSaveFile()" class="button-1">Last ned</button>
+			<img class="img-responsive img-downloadSection"> 
 		</div>
-		<div id="uploadSection" class="center datasection">
-			<h2>Last opp</h2><br>
+		<div id="uploadSection" class="center datasection img-uploadSection">
+			<h2>Last opp</h2>
 			<p>Her kan du laste opp dataen fra en fil du har lastet ned fra før.</p>
-			<br>
 			<h3>ADVARSEL:</h3>
-			<p></p>Hvis du laster opp en fil her, vil alt du har inne fra før bli overskrevet, og slettet. Det er ingen måte å få det tilbake på, hvis du ikke har lagret en annen fil.</h1>
+			<p>Hvis du laster opp en .pkmth fil her, vil alt du har inne fra før bli overskrevet, og slettet. Det er ingen måte å få det tilbake på, hvis du ikke har lagret en annen fil.</p>
 			<body onload="init()">
 				<input id="fileInput" type="file" name="file" class="saveupload" />
 				<pre id="fileContent"></pre>
-			</body>
+			</body> 
 		</div>
 	</div>
 	
