--- a/MathGame/shop.html
+++ b/MathGame/shop.html
@@ -103,6 +103,8 @@
 				  <a href="about.html">Om siden</a>
 				  <a href="about.html#contact">Kontakt oss</a>
 				  <a href="about.html#news">Nylige oppdateringer</a>
+				  <a href="saveandload.html">Lagre / Last Inn</a>
+				  <a href="faq.html">FAQ</a>
 				  <a href="#"> </a>
 				  <a onclick="resetPrompt()">Tilbakestill (Slett alt)</a>
 				</div>
@@ -444,6 +446,34 @@
 	</div>
 	<div class="carousel-playericons"
  		 data-flickity='{ "wrapAround": true }'>
+  		<div class="carousel-cell" style="background-image: url('images/playericons/player.png');">
+			<div class="carousel-playericon-caption" id="player" >
+				<h3>Player (M)</h3>
+				<a class="pricetag" data-price="0"></a>
+				<br>
+				<br>
+				<button class="button-1 buy" onClick="playerIconButtonBuy(this)">Kjøp</button>
+				<button class="button-1 disabled use" onClick="playerIconButtonUse(this)">Bruk</button>
+				<br>
+				<span class="hovertext" data-hover="Denne figuren kan du bruke på hele nettsiden!">
+					?
+				</span>
+			</div>
+		</div>
+		<div class="carousel-cell" style="background-image: url('images/playericons/player-fem.png');">
+			<div class="carousel-playericon-caption" id="player-fem" >
+				<h3>Player (F)</h3>
+				<a class="pricetag" data-price="0"></a>
+				<br>
+				<br>
+				<button class="button-1 buy" onClick="playerIconButtonBuy(this)">Kjøp</button>
+				<button class="button-1 disabled use" onClick="playerIconButtonUse(this)">Bruk</button>
+				<br>
+				<span class="hovertext" data-hover="Denne figuren kan du bruke på hele nettsiden!">
+					?
+				</span>
+			</div>
+		</div>
   		<div class="carousel-cell" style="background-image: url('images/playericons/roxanne.png');">
 			<div class="carousel-playericon-caption" id="roxanne" >
 				<h3>Roxanne</h3>
@@ -574,6 +604,160 @@
 			<div class="carousel-playericon-caption" id="winona" >
 				<h3>Winona</h3>
 				<a class="pricetag" data-price="5 000"></a>
+				<br>
+				<br>
+				<button class="button-1 buy" onClick="playerIconButtonBuy(this)">Kjøp</button>
+				<button class="button-1 disabled use" onClick="playerIconButtonUse(this)">Bruk</button>
+				<br>
+				<span class="hovertext" data-hover="Denne figuren kan du bruke på hele nettsiden!">
+					?
+				</span>
+			</div>
+		</div>
+		<div class="carousel-cell" style="background-image: url('images/playericons/brendan.png');">
+			<div class="carousel-playericon-caption" id="brendan" >
+				<h3>Brendan</h3>
+				<a class="pricetag" data-price="25 000"></a>
+				<br>
+				<br>
+				<button class="button-1 buy" onClick="playerIconButtonBuy(this)">Kjøp</button>
+				<button class="button-1 disabled use" onClick="playerIconButtonUse(this)">Bruk</button>
+				<br>
+				<span class="hovertext" data-hover="Denne figuren kan du bruke på hele nettsiden!">
+					?
+				</span>
+			</div>
+		</div>
+		<div class="carousel-cell" style="background-image: url('images/playericons/ethan.png');">
+			<div class="carousel-playericon-caption" id="ethan" >
+				<h3>Ethan</h3>
+				<a class="pricetag" data-price="25 000"></a>
+				<br>
+				<br>
+				<button class="button-1 buy" onClick="playerIconButtonBuy(this)">Kjøp</button>
+				<button class="button-1 disabled use" onClick="playerIconButtonUse(this)">Bruk</button>
+				<br>
+				<span class="hovertext" data-hover="Denne figuren kan du bruke på hele nettsiden!">
+					?
+				</span>
+			</div>
+		</div>
+		<div class="carousel-cell" style="background-image: url('images/playericons/hilbert.png');">
+			<div class="carousel-playericon-caption" id="hilbert" >
+				<h3>Hilbert</h3>
+				<a class="pricetag" data-price="25 000"></a>
+				<br>
+				<br>
+				<button class="button-1 buy" onClick="playerIconButtonBuy(this)">Kjøp</button>
+				<button class="button-1 disabled use" onClick="playerIconButtonUse(this)">Bruk</button>
+				<br>
+				<span class="hovertext" data-hover="Denne figuren kan du bruke på hele nettsiden!">
+					?
+				</span>
+			</div>
+		</div>
+		<div class="carousel-cell" style="background-image: url('images/playericons/nate.png');">
+			<div class="carousel-playericon-caption" id="nate" >
+				<h3>Nate</h3>
+				<a class="pricetag" data-price="25 000"></a>
+				<br>
+				<br>
+				<button class="button-1 buy" onClick="playerIconButtonBuy(this)">Kjøp</button>
+				<button class="button-1 disabled use" onClick="playerIconButtonUse(this)">Bruk</button>
+				<br>
+				<span class="hovertext" data-hover="Denne figuren kan du bruke på hele nettsiden!">
+					?
+				</span>
+			</div>
+		</div>
+		<div class="carousel-cell" style="background-image: url('images/playericons/rosa.png');">
+			<div class="carousel-playericon-caption" id="rosa" >
+				<h3>Rosa</h3>
+				<a class="pricetag" data-price="25 000"></a>
+				<br>
+				<br>
+				<button class="button-1 buy" onClick="playerIconButtonBuy(this)">Kjøp</button>
+				<button class="button-1 disabled use" onClick="playerIconButtonUse(this)">Bruk</button>
+				<br>
+				<span class="hovertext" data-hover="Denne figuren kan du bruke på hele nettsiden!">
+					?
+				</span>
+			</div>
+		</div>
+		<div class="carousel-cell" style="background-image: url('images/playericons/calem.png');">
+			<div class="carousel-playericon-caption" id="calem" >
+				<h3>Calem</h3>
+				<a class="pricetag" data-price="25 000"></a>
+				<br>
+				<br>
+				<button class="button-1 buy" onClick="playerIconButtonBuy(this)">Kjøp</button>
+				<button class="button-1 disabled use" onClick="playerIconButtonUse(this)">Bruk</button>
+				<br>
+				<span class="hovertext" data-hover="Denne figuren kan du bruke på hele nettsiden!">
+					?
+				</span>
+			</div>
+		</div>
+		<div class="carousel-cell" style="background-image: url('images/playericons/may.png');">
+			<div class="carousel-playericon-caption" id="may" >
+				<h3>May</h3>
+				<a class="pricetag" data-price="100 000"></a>
+				<br>
+				<br>
+				<button class="button-1 buy" onClick="playerIconButtonBuy(this)">Kjøp</button>
+				<button class="button-1 disabled use" onClick="playerIconButtonUse(this)">Bruk</button>
+				<br>
+				<span class="hovertext" data-hover="Denne figuren kan du bruke på hele nettsiden!">
+					?
+				</span>
+			</div>
+		</div>
+		<div class="carousel-cell" style="background-image: url('images/playericons/ash.png');">
+			<div class="carousel-playericon-caption" id="ash" >
+				<h3>Ash</h3>
+				<a class="pricetag" data-price="100 000"></a>
+				<br>
+				<br>
+				<button class="button-1 buy" onClick="playerIconButtonBuy(this)">Kjøp</button>
+				<button class="button-1 disabled use" onClick="playerIconButtonUse(this)">Bruk</button>
+				<br>
+				<span class="hovertext" data-hover="Denne figuren kan du bruke på hele nettsiden!">
+					?
+				</span>
+			</div>
+		</div>
+		<div class="carousel-cell" style="background-image: url('images/playericons/brock.png');">
+			<div class="carousel-playericon-caption" id="brock" >
+				<h3>Brock</h3>
+				<a class="pricetag" data-price="100 000"></a>
+				<br>
+				<br>
+				<button class="button-1 buy" onClick="playerIconButtonBuy(this)">Kjøp</button>
+				<button class="button-1 disabled use" onClick="playerIconButtonUse(this)">Bruk</button>
+				<br>
+				<span class="hovertext" data-hover="Denne figuren kan du bruke på hele nettsiden!">
+					?
+				</span>
+			</div>
+		</div>
+		<div class="carousel-cell" style="background-image: url('images/playericons/misty.png');">
+			<div class="carousel-playericon-caption" id="misty" >
+				<h3>Misty</h3>
+				<a class="pricetag" data-price="100 000"></a>
+				<br>
+				<br>
+				<button class="button-1 buy" onClick="playerIconButtonBuy(this)">Kjøp</button>
+				<button class="button-1 disabled use" onClick="playerIconButtonUse(this)">Bruk</button>
+				<br>
+				<span class="hovertext" data-hover="Denne figuren kan du bruke på hele nettsiden!">
+					?
+				</span>
+			</div>
+		</div>
+		<div class="carousel-cell" style="background-image: url('images/playericons/trainer_red_w_pika.png');">
+			<div class="carousel-playericon-caption" id="trainer_red_w_pika" >
+				<h3>Trainer Red (w/ Pikachu)</h3>
+				<a class="pricetag" data-price="1 000 000"></a>
 				<br>
 				<br>
 				<button class="button-1 buy" onClick="playerIconButtonBuy(this)">Kjøp</button>
