--- a/MathGame/stats.html
+++ b/MathGame/stats.html
@@ -102,6 +102,8 @@
 				  <a href="about.html">Om siden</a>
 				  <a href="about.html#contact">Kontakt oss</a>
 				  <a href="about.html#news">Nylige oppdateringer</a>
+				  <a href="saveandload.html">Lagre / Last Inn</a>
+				  <a href="faq.html">FAQ</a>
 				  <a href="#"> </a>
 				  <a onclick="resetPrompt()">Tilbakestill (Slett alt)</a>
 				</div>
