hotfixes and changes. Live on site as of 16.10.22

--- a/MathGame/about.html
+++ b/MathGame/about.html
@@ -11,10 +11,10 @@
 	<meta name="robots" content="noindex, nofollow">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<meta name="author" content="Tirco">
-	<link rel="stylesheet" href="globalstyle.css?v=21">
+	<link rel="stylesheet" href="globalstyle.css?v=22">
 	<!--<link rel="stylesheet" href="cookies.css?v=1">-->
-	<link rel="stylesheet" href="menustyle.css?v=21">
-	<link rel="stylesheet" href="about.css?v=21">
+	<link rel="stylesheet" href="menustyle.css?v=22">
+	<link rel="stylesheet" href="about.css?v=22">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
 	<!-- <link rel="stylesheet" href="https://www.jsdelivr.com/package/npm/bulma> -->
 </head>
@@ -196,7 +196,7 @@
 		</div>
 		<article class="content">
 			<h2 class="section-title">Nyheter</h1>
-				<p>??.10.2022</p>
+				<p>16.10.2022</p>
 				- Forbedret måten pokemon lagres og lastes inn på, slik at belastningen på spillet blir mindre.<br>
 				- La til en fiks for når man bruker frem og tilbake navigasjon.<br>
 				- Laget en FAQ side.<br>
@@ -206,6 +206,9 @@
 				- Gikk over til en lokal database for pokemon. Dette bør gjøre så feilene for å få pokemon blir sjeldnere.<br>
 				- Endret innlastningsmetoden på pokemon, slik at pokemon med feil kan fikses fortløpende.<br>
 				- La til flere nye karakterer på butikksiden.<br>
+				- Endret på sjansene for Shiny, Legendary og Mythic.<br>
+				- Gjorde sånn at om halloweenegget trenger 25 pokemon, så vil neste runde bare trenge 5.<br>
+				- La til en usynlig årsak til å ville gjøre minst mulig feil!<br>
 				<p>06.10.2022</p>
 				- Enda en hotfix! Makan til rotete kode! :P<br>
 				- La til en ny varselboks på forsiden, hvis jeg trenger å gi meldinger til brukerne.<br>
@@ -428,7 +431,7 @@
 </div>
 
 	  <!--<script src="main.js?v=1"></script>>-->
-	  <script src="global.js?v=21"></script>
+	  <script src="global.js?v=22"></script>
 	  <!--<script src="cookies.js?v=1"></script>-->
 	  <script async src="https://api.countapi.xyz/hit/pokemath.online/aboutVisited?callback=cb"></script>
 </body>
