--- a/MathGame/dex.html
+++ b/MathGame/dex.html
@@ -10,9 +10,9 @@
 	<meta name="robots" content="noindex, nofollow">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<meta name="author" content="Tirco">
-	<link rel="stylesheet" href="globalstyle.css?v=21">
-	<link rel="stylesheet" href="dex.css?v=21">
-	<link rel="stylesheet" href="pokemon.css?v=21">
+	<link rel="stylesheet" href="globalstyle.css?v=22">
+	<link rel="stylesheet" href="dex.css?v=22">
+	<link rel="stylesheet" href="pokemon.css?v=22">
 	<!--<link rel="stylesheet" href="cookies.css?v=1">-->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
 	<!-- <link rel="stylesheet" href="https://www.jsdelivr.com/package/npm/bulma> -->
@@ -168,7 +168,8 @@
 	</div>
 
 	<div class="columns is-multiline is-mobile" id="pokedex">
-		Laster...
+		Laster...<br><br>
+		Hvis innlastningen varer mer enn 30 sekunder, vennligst vurder å rapportere en feil.
     </div>
 
 
@@ -181,12 +182,12 @@
 	</div>
 
 	  <!--<script src="main.js?v=1"></script>>-->
-	  <script src="global.js?v=21"></script>
+	  <script src="global.js?v=22"></script>
 	  <!--<script src="cookies.js?v=1"></script>-->
-	  <script src="pokemondata.js?v=21"></script>
-	  <script src="alternateforms.js?v=21"></script>
-	  <script src="pokestuff.js?v=21"></script>
-	  <script src="dex.js?v=21"></script>
+	  <script src="pokemondata.js?v=22"></script>
+	  <script src="alternateforms.js?v=22"></script>
+	  <script src="pokestuff.js?v=22"></script>
+	  <script src="dex.js?v=22"></script>
 	  <script async src="https://api.countapi.xyz/hit/pokemath.online/dexVisited?callback=cb"></script>
 </body>
 
