--- a/MathGame/faq.html
+++ b/MathGame/faq.html
@@ -10,8 +10,8 @@
 	<meta name="robots" content="noindex, nofollow">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<meta name="author" content="Tirco">
-	<link rel="stylesheet" href="globalstyle.css?v=21">
-	<link rel="stylesheet" href="faq.css?v=21">
+	<link rel="stylesheet" href="globalstyle.css?v=22">
+	<link rel="stylesheet" href="faq.css?v=22">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
 	<!-- <link rel="stylesheet" href="https://www.jsdelivr.com/package/npm/bulma> -->
 </head>
@@ -221,13 +221,22 @@
 		</div>
 	  </div>
 	</div>
+	<div class="faq-question">
+		<input id="q99" type="checkbox" class="panel">
+		<div class="plus">+</div>
+		<label for="q99" class="panel-title">Jeg har et spørsmål som ikke står her!</label>
+		<div class="panel-content">
+			<p>Ta kontakt med oss! Bruk siden <a href="about.html#contact">Kontakt oss</a>!</p>
+		</div>
+	  </div>
+	</div>
 </div>
 
 <div class="botbar">
 	<a id="update-log" class="align-right" href="about.html#news">Nytt</a>
 </div>
 
-<script src="global.js?v=21"></script>
+<script src="global.js?v=22"></script>
 </body>
 
 </html>
