--- a/MathGame/pokemath.html
+++ b/MathGame/pokemath.html
@@ -10,8 +10,8 @@
 	<meta name="robots" content="noindex, nofollow">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<meta name="author" content="Tirco">
-	<link rel="stylesheet" href="globalstyle.css?v=21">
-	<link rel="stylesheet" href="pokemon.css?v=21">
+	<link rel="stylesheet" href="globalstyle.css?v=22">
+	<link rel="stylesheet" href="pokemon.css?v=22">
 	<!--<link rel="stylesheet" href="cookies.css?v=1">-->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
 	<!-- <link rel="stylesheet" href="https://www.jsdelivr.com/package/npm/bulma> -->
@@ -159,7 +159,10 @@
 	
 	<div class="columns is-multiline is-mobile" id="pokedex">
     </div>
-	<a class="button-1" href="./dex.html">Klikk her for å se alle dine pokemon.</a>
+	<div class="center" style="margin: auto; align-items: center; text-align: center">
+		<a class="button-1 center" style="left: 50%; right: 50%; margin: auto;" href="./dex.html">Klikk her for å se alle dine pokemon.</a>
+	</div>
+	
 	
 	<div class="overlay">
 		<div class="overlay-inner">
@@ -179,12 +182,12 @@
 	<a id="update-log" class="align-right" href="about.html#news">Nytt</a>
 </div>
 	  <!--<script src="main.js?v=1"></script>>-->
-	  <script src="alternateforms.js?v=21"></script>
-	  <script src="pokemondata.js?v=21"></script>
-	  <script src="global.js?v=21"></script>
+	  <script src="alternateforms.js?v=22"></script>
+	  <script src="pokemondata.js?v=22"></script>
+	  <script src="global.js?v=22"></script>
 	  <!--<script src="cookies.js?v=1"></script>-->
-	  <script src="math.js?v=21"></script>
-	  <script src="pokestuff.js?v=21"></script>
+	  <script src="math.js?v=22"></script>
+	  <script src="pokestuff.js?v=22"></script>
 	  <script async src="https://api.countapi.xyz/hit/pokemath.online/mathVisited?callback=cb"></script>
 	  <script>loadAmountFromList(5,true)</script>
 </html>
