--- a/MathGame/dex.html
+++ b/MathGame/dex.html
@@ -171,6 +171,10 @@
 		Laster...<br><br>
 		Hvis innlastningen varer mer enn 30 sekunder, vennligst vurder å rapportere en feil.
     </div>
+	<div class="columns is-multiline is-mobile" id="dexLoadStatus">
+		-
+    </div>
+	
 
 
 </div>
