--- a/MathGame/index.html
+++ b/MathGame/index.html
@@ -348,7 +348,8 @@
 	<p>Nå er all informasjon om pokemon lagret på vår lokale database. Dette betyr at vi ikke er avhengig av PokeAPI eller andre ting for å hente ut informasjon. 
 		Dette betyr også at mengden arbeid som vår nettside må gjøre, øker. Derfor har vi gjort noen valg: <br><br>
 			- Du vil ikke lenger se alle dine pokemon på mattesiden. Der vil du se de 5 forrige du fanget, og alle du har fanget nå. Dette gjør så vi ikke trenger å sende så mye informasjon til deg når du laster inn siden, og det vil gå raskere for spillere med mange pokemon å laste inn mattesiden.<br>
-			- Du kan fortsatt se alle pokemonene dine på pokedexen.</p>
+			- Du kan fortsatt se alle pokemonene dine på pokedexen.<br>
+			- Innlastningen av pokedexen kan ta lang tid for brukere med mange pokemon. Vi jobber med en løsning som vil gjøre dette raskere.</p>
 	<p>Vi har laget en side hvor du kan laste ned en lagringsfil. Dette er mest for de elevene som ikke får lagret pokemon på sin egen enhet, eller som ofte må bytte på datamaskiner. Du finner funksjonen under <a href="saveandload.html">lagre og last inn.</a> (Beta funksjon)</p>
 	<p>Vi har laget en side for ofte stilte spørsmål (FAQ). <a href="faq.html">Den finner du under "FAQ".</a> </p>
 	<h3>Statistikk <a class="date">16.10.2022</a></h3>
