--- a/MathGame/shop.html
+++ b/MathGame/shop.html
@@ -757,7 +757,7 @@
 		<div class="carousel-cell" style="background-image: url('images/playericons/trainer_red_w_pika.png');">
 			<div class="carousel-playericon-caption" id="trainer_red_w_pika" >
 				<h3>Trainer Red (w/ Pikachu)</h3>
-				<a class="pricetag" data-price="1 000 000"></a>
+				<a class="pricetag" data-price="1000000"></a>
 				<br>
 				<br>
 				<button class="button-1 buy" onClick="playerIconButtonBuy(this)">Kjøp</button>
