--- a/MathGame/about.html
+++ b/MathGame/about.html
@@ -196,6 +196,11 @@
 		</div>
 		<article class="content">
 			<h2 class="section-title">Nyheter</h1>
+				<p>02.11.2022</p>
+				- Halloween-eventet er automatisk fjernet.
+				- Oppdaterte Customizer (lag ditt eget nivå).
+				- Gjorde slik at gjentatte pokemon som er shiny, legendarisk eller mytisk gir ekstra mye penger.
+				- Gikk igjennom sjansene for legendarisk, mytisk og shiny.
 				<p>16.10.2022</p>
 				- Forbedret måten pokemon lagres og lastes inn på, slik at belastningen på spillet blir mindre.<br>
 				- La til en fiks for når man bruker frem og tilbake navigasjon.<br>
