--- a/MathGame/index.html
+++ b/MathGame/index.html
@@ -341,44 +341,28 @@
 	<a id="update-log" class="align-right" href="about.html#news">Nytt</a>
 </div>
 
-
 <div id="alertbox" class="alert simple-alert is-hidden-"> <!-- is-hidden if hidden-->
-	<h3>Oppdatering <a class="date">16.10.2022</a></h3>
-	<p>Her kommer en større oppdatering med noen store endringer, og mange små. For fullstending liste over alle endringene, <a href="about.html#news">trykk her.</a></p>
-	<p>Nå er all informasjon om pokemon lagret på vår lokale database. Dette betyr at vi ikke er avhengig av PokeAPI eller andre ting for å hente ut informasjon. 
-		Dette betyr også at mengden arbeid som vår nettside må gjøre, øker. Derfor har vi gjort noen valg: <br><br>
-			- Du vil ikke lenger se alle dine pokemon på mattesiden. Der vil du se de 5 forrige du fanget, og alle du har fanget nå. Dette gjør så vi ikke trenger å sende så mye informasjon til deg når du laster inn siden, og det vil gå raskere for spillere med mange pokemon å laste inn mattesiden.<br>
-			- Du kan fortsatt se alle pokemonene dine på pokedexen.<br>
-			- Innlastningen av pokedexen kan ta lang tid for brukere med mange pokemon. Vi jobber med en løsning som vil gjøre dette raskere.</p>
-	<p>Vi har laget en side hvor du kan laste ned en lagringsfil. Dette er mest for de elevene som ikke får lagret pokemon på sin egen enhet, eller som ofte må bytte på datamaskiner. Du finner funksjonen under <a href="saveandload.html">lagre og last inn.</a> (Beta funksjon)</p>
-	<p>Vi har laget en side for ofte stilte spørsmål (FAQ). <a href="faq.html">Den finner du under "FAQ".</a> </p>
-	<h3>Statistikk <a class="date">16.10.2022</a></h3>
-	<p>Den siste uken har vi kjørt en del målinger for å se bruken av pokemath.<br>På 1 uke har dere vist noen helt utrolige tall!<br><br>
-		#1: Antall brukere: 29 800 (Dette er også brukere som har startet på nytt.)<br>
-		#2: Antall oppgaver løst: 5 658 316<br>
-		#3: Antall feil svar: 543 162<br>
-		#4: Antall pokemon fanget: 1 514 997<br>
-		#5: Antall mynter tjent: 526 808 694<br>
-		#6: Antall mynter brukt: 436 643 228<br><br>
-		Vi har kun anonym statistikk, så vi vet ikke hvor mye hver enkelt person har bidratt med.
-	</p>
-	<h3>Feilmeldinger <a class="date">07.10.2022</a></h3>
-	<p>Om du oppdager en feil, eller vil fortelle oss om idèene dine, så kan du finne skjemaer for det <a href="http://pokemath.online/about.html#contact">ved å trykke her</a> eller gå inn på siden for "kontakt oss". 
-	Takk for alle svarene på undersøkelsen vi hadde. Det var nesten 500 av dere som har svart, og kommet med tilbakemeldinger! Nå vet vi hva vi skal jobbe med videre.</p>
+	<h3>November <a class="date">02.11.2022</a></h3>
+	<p>Nå er vi over i November, og det betyr at Halloween-egget er borte for denne gang! <br>
+	Men frykt ikke, det kommer nok tilbake neste år, med flere skumle pokemon.<br><br>
+	Noen har spurt oss om det er noe poeng i å spille på vanskeligere nivåer, og det er det!<br><br>
+	På høyere nivåer får man:<br>
+	- flere mynter pr oppgave.<br>
+	- høyere sjanse for legendarisk, mytisk og shiny.<br>
+	- høyere sjanse for å få noen av de spesielle variantene.</p>
+	Vi ønsker alltid at man skal spille så vanskelig man klarer, men vil heller ikke demotivere de som ikke klarer å løse regnestykker med multiplikasjon eller divisjon.
+	Derfor anbefaler vi at lærere lager <a href="./customizer.html">egendefinerte oppgavesett</a> som de deler ut til elevene, enten ved bruk av lenker eller QR-Koder.<br>
+	<br>
+	2.trinn på Nordby skole har spurt om vi kan legge inn bedre kontroll på leddene i addisjon og subtraksjon i "lag ditt eget". Det har vi ordnet, og takker for den gode idèen!<br>
+	<br>
+	Noen spurte oss om vi kunne gjøre slik at om du får en shiny, mytisk eller legendarisk du har fra før, så får du ekstra mye penger, og det tenkte vi var en god idè, så det har vi ordnet!<br><br>
+	Gjentatt legendarisk eller shiny vil nå gi deg 2x mynter, mytisk gir deg 3x. Får du en shiny & legendarisk så vil det bli 4x, shiny mytisk blir 6x. Skuffelsen blir altså ikke like stor nå om du får en legendarisk som du hadde fra før!<br>
 	<a class="close" onclick="closeAlert()">&times;</a>
-	<br>
-	<br>
 	<br>
 	- Mvh. PokeMorten
 	<br>
 </div>
-
-
-
-
-	  <!--<script src="main.js?v=1"></script>>-->
 	  <script src="global.js?v=22"></script>
-	  <!--<script src="cookies.js?v=1"></script>-->
 	  <script src="menu.js?v=22"></script>
 </body>
 
